--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,4 +1,5 @@
-booking.property=Booking Profile Dev
+booking.property=Booking Profile Dev Updated
+spring.datasource.url=jdbc:postgresql://localhost:5432/booking-microsevice?user=postgres&password=000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
